# OpenSSL

./: CMakeLists.txt  openssh_test.cpp  openssl_test.cpp  private.pem  public.pem
Scripts/: opensh_test.sh  private.pem  public.pem  text.base64
include/: digest.h  encode.h  encrypt.h  key.h  openssh_test.h  openssl_test.h  test_aes1.h  utils.h
ipc/: CMakeLists.txt  binary_semaphore.h  boost_reader.cpp  boost_writer.cpp  reader.cpp  writer.cpp
ipc/include/: binary_semaphore.h  shared_memory.h
src/: CMakeLists.txt  openssl_reader.cpp  openssl_test.cpp  openssl_writer.cpp  test_aes.cpp  test_aes1.cpp
